# bio-research-extractor

./: LICENSE  README.md  gitignore  papers.csv  pyproject.toml
bio_research_extractor/: main.py  papers.csv.xlsx
