[tool.poetry]
name = "bio-research-extractor"
version = "0.1.0"
description = ""
authors = ["Soumi <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.4"
typer = "^0.16.0"
pandas = "^2.3.1"
beautifulsoup4 = "^4.13.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
